Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et totam commodi qui libero, vel ex deleniti eos, maxime accusamus alias consectetur dolor deserunt suscipit culpa sequi temporibus vero reiciendis impedit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi repudiandae animi a inventore adipisci ducimus repellat possimus consequuntur. Dolore sit, dolores laboriosam magnam iusto non. Doloribus eveniet excepturi aliquam dolor.</p>
 </body>
 </html>
